# cpp-demos

./: .gitignore  CMakeLists.txt  README.md  main.cc
demos/exceptions/: exceptions.cc  exceptions.hpp
demos/oop/diamond_inheritance/: diamond_inheritance.cc  diamond_inheritance.hpp
src/: main.cc
src/experiments/: revealing_the_vtbl.hpp
src/experiments/multi-threading/: hello_world.hpp  resource_sync.hpp  thread_comm.hpp
